--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@tremor/react": "^3.11.1",
+    "heroicons": "^2.0.18",
     "leaflet": "^1.9.4",
+    "leaflet.tilelayer.colorfilter": "^1.2.5",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
