--- a/package.json
+++ b/package.json
@@ -9,17 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^1.0.6",
     "@tremor/react": "^3.11.1",
+    "axios": "^1.6.2",
     "heroicons": "^2.0.18",
+    "jotai": "^2.6.0",
     "leaflet": "^1.9.4",
+    "leaflet-velocity": "^2.1.4",
     "leaflet.tilelayer.colorfilter": "^1.2.5",
+    "lottie-react": "^2.4.0",
     "next": "14.0.3",
     "react": "^18",
+    "react-datepicker": "^4.24.0",
     "react-dom": "^18",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "wind-js-leaflet": "^2.0.5"
   },
   "devDependencies": {
+    "@types/node": "20.10.4",
+    "@types/react": "18.2.43",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
