--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^1.0.6",
     "@tremor/react": "^3.11.1",
     "axios": "^1.6.2",
+    "formik": "^2.4.5",
     "heroicons": "^2.0.18",
     "jotai": "^2.6.0",
     "leaflet": "^1.9.4",
@@ -26,7 +27,9 @@
     "react-datepicker": "^4.24.0",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
-    "wind-js-leaflet": "^2.0.5"
+    "react-toastify": "^9.1.3",
+    "wind-js-leaflet": "^2.0.5",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "20.10.4",
