--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "leaflet-velocity": "^2.1.4",
     "leaflet.tilelayer.colorfilter": "^1.2.5",
     "lottie-react": "^2.4.0",
+    "midtrans-client": "^1.3.1",
     "next": "14.0.3",
     "react": "^18",
     "react-datepicker": "^4.24.0",
